Configs updating added for next deployes. Added hard protection for XMLRPC attack for WordPress

--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -3,15 +3,15 @@
   apt: name=nginx state=latest
 
 - name: Copy nginx configuration for wordpress
-  template: src=wordpress dest=/etc/nginx/sites-available/wordpress force=no
+  template: src=wordpress dest=/etc/nginx/sites-available/wordpress force=yes
   notify: restart nginx
 
 - name: Copy nginx ssl configuration for wordpress
-  template: src=wordpress-ssl dest=/etc/nginx/sites-available/wordpress-ssl force=no
+  template: src=wordpress-ssl dest=/etc/nginx/sites-available/wordpress-ssl force=yes
   notify: restart nginx
 
 - name: Copy nginx general configuration
-  template: src=nginx.conf dest=/etc/nginx/nginx.conf
+  template: src=nginx.conf dest=/etc/nginx/nginx.conf force=yes
   notify: restart nginx
 
 - name: Create symlink for wordpress configuration
