--- a/roles/wordpress/tasks/main.yml
+++ b/roles/wordpress/tasks/main.yml
@@ -2,11 +2,11 @@
 - name: Creates directory for web files
   file: path=/var/www/html state=directory
 
-- name: Download WordPress
-  get_url: url=http://wordpress.org/wordpress-{{ wp_version }}.tar.gz dest=/var/www/html/wordpress.tar.gz force=yes
+# - name: Download WordPress
+#   get_url: url=http://wordpress.org/wordpress-{{ wp_version }}.tar.gz dest=/var/www/html/wordpress.tar.gz force=yes
 
-- name: Extract archive
-  unarchive: src=/var/www/html/wordpress.tar.gz dest=/var/www/html/ copy=no creates=/var/www/html/wordpress
+# - name: Extract archive
+#   unarchive: src=/var/www/html/wordpress.tar.gz dest=/var/www/html/ copy=no creates=/var/www/html/wordpress
 
 - name: Add group "wordpress"
   group: name=wordpress
@@ -25,14 +25,14 @@
 - name: Create WordPress database user
   mysql_user: name={{ wp_db_user }} password={{ wp_db_password }} priv={{ wp_db_name }}.*:ALL host='localhost' state=present
 
-- name: Copy WordPress config file
-  template: src=wp-config.php dest=/var/www/html/wordpress/ force=no
+# - name: Copy WordPress config file
+#   template: src=wp-config.php dest=/var/www/html/wordpress/ force=no
 
-- name: Copy WordPress memcached drop in
-  template: src=object-cache.php dest=/var/www/html/wordpress/wp-content
+# - name: Copy WordPress memcached drop in
+#   template: src=object-cache.php dest=/var/www/html/wordpress/wp-content
 
-- name: Copy Batcache drop in
-  template: src=advanced-cache.php dest=/var/www/html/wordpress/wp-content
+# - name: Copy Batcache drop in
+#   template: src=advanced-cache.php dest=/var/www/html/wordpress/wp-content
 
 - name: Change ownership of WordPress installation
   file: path=/var/www/html/wordpress/ owner=wordpress group=wordpress state=directory recurse=yes mode=0775
